# robosuite_models

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: load_compositional_robot_example.py
robosuite_menagerie/: __init__.py  utils.py
robosuite_menagerie/assets/robots/aloha/: robot.xml
robosuite_menagerie/robots/: __init__.py  compositional.py
robosuite_menagerie/robots/bases/: aloha_mount.py  b1_base.py  go2_base.py
robosuite_menagerie/robots/end_effectors/: __init__.py  ability_hands.py  aloha_gripper.py  g1_three_finger_gripper.py  pr2_gripper.py  schunk_svh_hands.py  umi_gripper.py  yumi_gripper.py  z1_gripper.py
robosuite_menagerie/robots/grippers/: ability_hands.py  aloha_gripper.py  g1_three_finger_gripper.py  pr2_gripper.py  schunk_svh_hands.py  umi_gripper.py  yumi_gripper.py  z1_gripper.py
robosuite_menagerie/robots/manipulators/: aloha_robot.py  arx5_robot.py  g1_robot.py  h1_robot.py  pr2_robot.py  vx300s_robot.py  yumi_robot.py  z1_robot.py
robosuite_models/: __init__.py  utils.py
robosuite_models/robots/: __init__.py  compositional.py
robosuite_models/robots/bases/: __init__.py  aloha_mount.py  b1_base.py  go2_base.py
robosuite_models/robots/grippers/: ability_hands.py  aloha_gripper.py  g1_three_finger_gripper.py  pr2_gripper.py  schunk_svh_hands.py  umi_gripper.py  yumi_gripper.py  z1_gripper.py
robosuite_models/robots/manipulators/: __init__.py  aloha_robot.py  arx5_robot.py  g1_robot.py  h1_robot.py  pr2_robot.py  vx300s_robot.py  yumi_robot.py  z1_robot.py
(+2 files in other folders)
