[project]
name = "robosuite_models"
version = "1.0.0"
authors = [
  { name="robosuite core team members", email="yifeng.zhu@utexas.edu" },
]
description = "A collection of robot models for robosuite simulation."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ARISE-Initiative/robosuite_models"
Issues = "https://github.com/ARISE-Initiative/robosuite_models/issues"

[tool.black]
line-length = 120
target-version = ["py36", "py37", "py38", "py39", "py310"]
extend-exclude = "robosuite_models/((robots/assets))"

[tool.isort]
profile = "black"
line_length = 120
skip = ["__init__.py"]
filter_files = true
py_version = "all"
extend_skip = [
    "robosuite_models/assets"
    ]
